TeX mapping now uses int codepoint not char